--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -9,6 +9,8 @@ dist.dir=dist
 dist.jar=${dist.dir}/${jar.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
+file.reference.commons-fileupload-1.3.1-bin.zip=commons-fileupload-1.3.1-bin.zip
+file.reference.commons-fileupload-1.3.1-src.zip=commons-fileupload-1.3.1-src.zip
 j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -37,5 +39,7 @@ project.TccLulu-war=TccLulu-war
 reference.TccLulu-ejb.dist-ear=${project.TccLulu-ejb}/dist/TccLulu-ejb.jar
 reference.TccLulu-war.dist-ear=${project.TccLulu-war}/dist/TccLulu-war.war
 resource.dir=setup
-run.classpath=
+run.classpath=\
+    ${file.reference.commons-fileupload-1.3.1-bin.zip}:\
+    ${file.reference.commons-fileupload-1.3.1-src.zip}
 source.root=.
